# firebird-wire

./: COMECE-AQUI.md  Cargo.toml  DIAGRAMA-INTERNO.md  EXPLICACAO.md  GUIA-DE-USO.md  PROTOCOL-NOTES.md  PROXIMAS-ETAPAS.md  README.md
examples/: dump.rs
src/: array.rs  batch.rs  blob.rs  blr.rs  charset.rs  config.rs  connection.rs  decfloat.rs  dos.rs  error.rs  events.rs  lib.rs  message.rs  pool.rs  service.rs  statement.rs  transaction.rs  tz.rs  value.rs
src/auth/: mod.rs  srp.rs  wirecrypt.rs
src/wire/: consts.rs  mod.rs  response.rs  stream.rs  xdr.rs
tests/: integration.rs
