[package]
name = "firebird-wire"
version = "0.1.2"
edition = "2024"
description = "Pure-Rust sync driver for Firebird 5+ (wire protocol, SRP auth, batch/array DML)"
license = "MIT"
repository = "https://github.com/pinguixs/firebird-wire"
keywords = ["firebird", "database"]
categories = ["database"]

[dependencies]
bytes = "1"
num-bigint = "0.4"
num-traits = "0.2"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
thiserror = "2"
tracing = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }
chrono = { version = "0.4", default-features = false, optional = true }

[features]
default = []
# Emit tracing spans/events for protocol-level debugging.
trace = ["dep:tracing"]
# Suporte a charsets multibyte e single-byte adicionais (SJIS, EUC-JP, GBK,
# Big5, KOI8, ISO-8859-* e Windows-125x) via `encoding_rs`. Sem ela, esses
# charsets de conexão recaem em UTF-8 com perdas.
charset-full = ["dep:encoding_rs"]
# Conversões entre `Value` e `chrono::NaiveDate`/`NaiveTime`/`NaiveDateTime`.
chrono = ["dep:chrono"]
